<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beeper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="kmph">km/hr: 8.0</string>
    <string name="level">Level: 0</string>
    <string name="lap">Lap: 0</string>
    <string name="stop">Stop!</string>
    <string name="welcome">Get ready to Run!</string>
    <string name="start">Start!</string>
    <string name="quit">Quit</string>


</resources>
