<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MyBeeper"
    android:keepScreenOn="true">

    <TextView
        android:text="@string/welcome"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"/>
    <TextView
        android:id="@+id/level"
        android:text="@string/level"
        android:textSize="60sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/lap"
        android:text="@string/lap"
        android:textSize="60sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/kmh"
        android:text="@string/kmph"
        android:textSize="60sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/stop"
        android:text="@string/stop"
        android:textSize="80sp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
</LinearLayout>
